# santuario-cpp

./: CHANGELOG.txt  Makefile.am  NOTICE.txt  configure.ac  xml-security-c.pc.in  xml-security-c.spec
Projects/VC14.0/xsec/: xsec.sln
Projects/VC15.0/xsec/: xsec.sln
Projects/VC6.0/Samples/: Samples.dsw
Projects/VC6.0/xsec/: xsec.dsw
Projects/VC7.0/Samples/: Samples.sln
Projects/VC7.0/xsec/: xsec.sln
doc/: doxy.conf
m4/: ax_pkg_check_modules.m4  ax_restore_flags_with_prefix.m4  ax_save_flags_with_prefix.m4
xsec/: Makefile.am  basicTests.pl
xsec/canon/: XSECC14n20010315.cpp  XSECC14n20010315.hpp  XSECCanon.cpp  XSECCanon.hpp  XSECXMLNSStack.cpp  XSECXMLNSStack.hpp
xsec/dsig/: DSIGAlgorithmHandlerDefault.cpp  DSIGAlgorithmHandlerDefault.hpp  DSIGConstants.cpp  DSIGConstants.hpp  DSIGKeyInfo.hpp  DSIGKeyInfoDEREncoded.cpp  DSIGKeyInfoDEREncoded.hpp  DSIGKeyInfoExt.hpp  DSIGKeyInfoList.cpp  DSIGKeyInfoList.hpp  DSIGKeyInfoMgmtData.cpp  DSIGKeyInfoMgmtData.hpp  DSIGKeyInfoName.cpp  DSIGKeyInfoName.hpp  DSIGKeyInfoPGPData.cpp  DSIGKeyInfoPGPData.hpp  DSIGKeyInfoSPKIData.cpp  DSIGKeyInfoSPKIData.hpp  DSIGKeyInfoValue.cpp  DSIGKeyInfoValue.hpp  DSIGKeyInfoX509.cpp  DSIGKeyInfoX509.hpp  DSIGObject.cpp  DSIGObject.hpp  DSIGReference.cpp  DSIGReference.hpp  DSIGReferenceList.cpp  DSIGReferenceList.hpp  DSIGSignature.cpp  DSIGSignature.hpp  DSIGSignedInfo.cpp  DSIGSignedInfo.hpp  DSIGTransform.cpp  DSIGTransform.hpp  DSIGTransformBase64.cpp  DSIGTransformBase64.hpp  DSIGTransformC14n.cpp  DSIGTransformC14n.hpp  DSIGTransformEnvelope.cpp  DSIGTransformEnvelope.hpp  (+12 more)
xsec/enc/: XSECCryptoBase64.cpp  XSECCryptoBase64.hpp  XSECCryptoException.cpp  XSECCryptoException.hpp  XSECCryptoHash.hpp  XSECCryptoKey.hpp  XSECCryptoKeyDSA.hpp  XSECCryptoKeyEC.hpp  XSECCryptoKeyHMAC.hpp  XSECCryptoKeyRSA.hpp  XSECCryptoProvider.hpp  XSECCryptoSymmetricKey.hpp  XSECCryptoUtils.cpp  XSECCryptoUtils.hpp  XSECCryptoX509.cpp  XSECCryptoX509.hpp  XSECKeyInfoResolver.hpp  XSECKeyInfoResolverDefault.cpp  XSECKeyInfoResolverDefault.hpp
xsec/enc/NSS/: NSSCryptoHash.cpp  NSSCryptoHash.hpp  NSSCryptoHashHMAC.cpp  NSSCryptoHashHMAC.hpp  NSSCryptoKeyDSA.cpp  NSSCryptoKeyDSA.hpp  NSSCryptoKeyHMAC.cpp  NSSCryptoKeyHMAC.hpp  NSSCryptoKeyRSA.cpp  NSSCryptoKeyRSA.hpp  NSSCryptoProvider.cpp  NSSCryptoProvider.hpp  NSSCryptoSymmetricKey.cpp  NSSCryptoSymmetricKey.hpp  NSSCryptoX509.hpp
xsec/enc/OpenSSL/: OpenSSLCryptoBase64.cpp  OpenSSLCryptoBase64.hpp  OpenSSLCryptoHash.cpp  OpenSSLCryptoHash.hpp  OpenSSLCryptoHashHMAC.cpp  OpenSSLCryptoHashHMAC.hpp  OpenSSLCryptoKeyDSA.cpp  OpenSSLCryptoKeyDSA.hpp  OpenSSLCryptoKeyEC.cpp  OpenSSLCryptoKeyEC.hpp  OpenSSLCryptoKeyHMAC.cpp  OpenSSLCryptoKeyHMAC.hpp  OpenSSLCryptoKeyRSA.cpp  OpenSSLCryptoKeyRSA.hpp  OpenSSLCryptoProvider.cpp  OpenSSLCryptoProvider.hpp  OpenSSLCryptoSymmetricKey.cpp  OpenSSLCryptoSymmetricKey.hpp  OpenSSLCryptoX509.cpp  OpenSSLCryptoX509.hpp  OpenSSLSupport.cpp  OpenSSLSupport.hpp
xsec/enc/WinCAPI/: WinCAPICryptoHash.cpp  WinCAPICryptoHash.hpp  WinCAPICryptoHashHMAC.cpp  WinCAPICryptoHashHMAC.hpp  WinCAPICryptoKeyDSA.cpp  WinCAPICryptoKeyDSA.hpp  WinCAPICryptoKeyHMAC.cpp  WinCAPICryptoKeyHMAC.hpp  WinCAPICryptoKeyRSA.cpp  WinCAPICryptoKeyRSA.hpp  (+6 more)
xsec/framework/: XSECAlgorithmHandler.hpp  XSECAlgorithmMapper.cpp  XSECAlgorithmMapper.hpp  XSECConfig.hpp.in  XSECDefs.hpp  XSECEnv.cpp  XSECEnv.hpp  XSECError.cpp  XSECError.hpp  XSECException.cpp  XSECException.hpp  XSECProvider.cpp  XSECProvider.hpp  XSECURIResolver.hpp  XSECURIResolverXerces.cpp  XSECURIResolverXerces.hpp  XSECVersion.hpp  XSECW32Config.hpp  version.rc
xsec/samples/: IOStreamOutputter.cpp  IOStreamOutputter.hpp  simpleDecrypt.cpp  simpleEncrypt.cpp  simpleHMAC.cpp  simpleValidate.cpp
xsec/transformers/: TXFMBase.cpp  TXFMBase.hpp  TXFMBase64.cpp  TXFMBase64.hpp  TXFMC14n.cpp  TXFMC14n.hpp  TXFMChain.cpp  TXFMChain.hpp  TXFMChar.cpp  TXFMChar.hpp  TXFMCipher.cpp  TXFMCipher.hpp  TXFMConcatChains.cpp  TXFMConcatChains.hpp  TXFMDocObject.cpp  TXFMDocObject.hpp  TXFMEnvelope.cpp  TXFMEnvelope.hpp  TXFMHash.cpp  TXFMHash.hpp  TXFMMD5.cpp  TXFMMD5.hpp  TXFMOutputFile.cpp  TXFMOutputFile.hpp  TXFMParser.cpp  TXFMParser.hpp  TXFMSB.cpp  TXFMSB.hpp  TXFMSHA1.cpp  TXFMSHA1.hpp  TXFMURL.cpp  TXFMURL.hpp  TXFMXPath.cpp  TXFMXPath.hpp  TXFMXPathFilter.cpp  TXFMXPathFilter.hpp  TXFMXSL.cpp  TXFMXSL.hpp
xsec/utils/: XSECAlgorithmSupport.cpp  XSECAlgorithmSupport.hpp  XSECAutoPtr.hpp  XSECBinTXFMInputStream.cpp  XSECBinTXFMInputStream.hpp  XSECDOMUtils.cpp  XSECDOMUtils.hpp  XSECNameSpaceExpander.cpp  XSECNameSpaceExpander.hpp  XSECPlatformUtils.cpp  XSECPlatformUtils.hpp  XSECSOAPRequestor.hpp  XSECSOAPRequestorSimple.cpp  XSECSOAPRequestorSimple.hpp  XSECSafeBuffer.cpp  XSECSafeBuffer.hpp  XSECSafeBufferFormatter.cpp  XSECSafeBufferFormatter.hpp  XSECTXFMInputSource.cpp  XSECTXFMInputSource.hpp  XSECXPathNodeList.cpp  XSECXPathNodeList.hpp
xsec/xenc/: XENCCipher.hpp  XENCCipherData.hpp  XENCCipherReference.hpp  XENCCipherValue.hpp  XENCEncryptedData.hpp  XENCEncryptedKey.hpp  XENCEncryptedType.hpp  XENCEncryptionMethod.hpp
xsec/xkms/: XKMSAuthentication.hpp  XKMSCompoundRequest.hpp  XKMSCompoundResult.hpp  XKMSConstants.cpp  XKMSConstants.hpp  XKMSKeyBinding.hpp  XKMSKeyBindingAbstractType.hpp  XKMSLocateRequest.hpp  XKMSLocateResult.hpp  XKMSMessageAbstractType.hpp  XKMSMessageFactory.hpp  XKMSNotBoundAuthentication.hpp  XKMSPendingRequest.hpp  XKMSPrototypeKeyBinding.hpp  XKMSQueryKeyBinding.hpp  XKMSRSAKeyPair.hpp  XKMSRecoverKeyBinding.hpp  XKMSRecoverRequest.hpp  XKMSRecoverResult.hpp  XKMSRegisterRequest.hpp  XKMSRegisterResult.hpp  XKMSReissueKeyBinding.hpp  XKMSReissueRequest.hpp  XKMSReissueResult.hpp  XKMSRequestAbstractType.hpp  XKMSRespondWith.hpp  XKMSResponseMechanism.hpp  XKMSResult.hpp  XKMSResultType.hpp  XKMSRevokeKeyBinding.hpp  XKMSRevokeRequest.hpp  XKMSRevokeResult.hpp  XKMSStatus.hpp  XKMSStatusRequest.hpp  XKMSStatusResult.hpp  XKMSUnverifiedKeyBinding.hpp  XKMSUseKeyWith.hpp  XKMSValidateRequest.hpp  XKMSValidateResult.hpp  XKMSValidityInterval.hpp
(+187 files in other folders)
